test/libsolidity/syntaxTests/parsing/function_type_multiple_visibility.sol
contract C {
  function f() public pure {
    function() public public g;
  }
}
// ----
// ParserError 9439: (64-70): Visibility already specified as "public".
